<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">National Vaccination Organisation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">National Vaccination Organisation</string>
    <string name="nav_header_subtitle">myEmail@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Video and Pictures</string>
    <string name="menu_slideshow">Vaccination Appointment</string>
    <string name="menu_statistics">Vaccination Statistics</string>
    <string name="menu_questions">Frequent Asked Questions</string>

    //form
    <string name="form_title">Appointment Request</string>
    <string name="form_name_hint">Name</string>
    <string name="form_surname_hint">Surname</string>
    <string name="form_phone_hint">Phone Number</string>
    <string name="form_amka_hint">ΑΜΚΑ</string>
    <string name="form_email_hint">Valid E-mail</string>
    <string name="form_button_hint">Make Request</string>

    //dates
    <string name="date_from">e.g 2021-05-23</string>
    <string name="date_to">e.g 2021-05-30</string>

    //pics and videos
    <string name="video_Title">Click on the frame below in order to see the video</string>

    //home page
    <string name="home_title">Our goal is to help you arrange your appointment for vaccination against COVID-19</string>
    <string name="home_subtitle">Our goal is to help you arrange your appointment for vaccination against COVID-19 . Navigate through the app menu and select \'Vaccination Appointment\' . </string>
    <string name="home_welcome">Welcome to the application of National Vaccination Organisation</string>

    //stats
    <string name="date_from_text"> Date starting:</string>
    <string name="date_to_text">Date to:</string>
    <string name="btn_stats">SEARCH</string>

</resources>